network_policy/03-allow-selective-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-selective
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: test-client
      namespaceSelector:
        matchLabels:
          name: test-project
