network_policy/04-allow-all-ingress-from-all-namespaces.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-all-namespaces
spec:
  podSelector:
    matchLabels:
      app: hello-openshishift
  ingress:
  - from:
    - namespaceSelector: {}
