network_policy/05-allow-ingress-to-port.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow-8080
spec:
  podSelector:
    matchLabels:
      app: hello-openshift
  ingress:
  - ports:
    - port: 8080
    from:
    - podSelector:
        matchLabels:
          role: monitoring
