network_policy/06-allow-only-router-and-monitoring.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-only-ingress-router-monitoring
spec:
  podSelector:
    matchLabels:
      app: hello-openshift
  ingress:
  - from:
    - podSelector:
        matchLabels:
          ingresscontroller.operator.openshift.io/deployment-ingresscontroller: default
      namespaceSelector:
        matchLabels:
          name: openshift-ingress
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: node-exporter
      namespaceSelector:
        matchLabels:
          name: openshift-monitoring
