network_policy/07-allow-ingress-from-ip-block.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-allow-from-ipblock
spec:
  podSelector:
    matchLabels:
      app: hello-openshift
  Ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
