network_policy/08-deny-all-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pod-deny-all-ingress
spec:
  podSelector: {}
  ingress: []
