network_policy/13-deny-all-ingress-expect-monitoring.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-ingress-except-monitoring
spec:
  podSelector:
    matchLabels:
      app: hello-openshift
  ingress:
  - from:
    - podSelector: {}
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: node-exporter
      namespaceSelector:
        matchLabels:
          name: openshift-monitoring
