network_policy/allow-custom-pods.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: hello-openshift
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: test-client
