network_policy/deny-pod-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pod-deny-all-ingress
spec:
  podSelector:
    matchLabels:
      app: hello-openshift
  ingress: []
